# flaglite

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  llms.txt
.github/workflows/: build.yml  dashboard-e2e.yml  dashboard.yml  deploy-website.yml  e2e.yml  helm-publish.yml  lint.yaml  release-cli.yml  static.yml
api/: .env.example  Cargo.toml  README.md
api/src/: auth.rs  db.rs  main.rs  models.rs  username.rs
api/src/handlers/: auth.rs  cli.rs  flags.rs  mod.rs
api/src/storage/: mod.rs  postgres.rs  sqlite.rs
apps/e2e-tests/: Cargo.toml
apps/e2e-tests/src/: lib.rs
apps/e2e-tests/tests/: auth_test.rs  flags_test.rs  projects_test.rs  signup_flow_test.rs
apps/e2e-tests/tests/common/: harness.rs  mod.rs  utils.rs
apps/flaglite-api/: Cargo.toml
apps/flaglite-api/src/: auth.rs  config.rs  error.rs  main.rs  models.rs  username.rs
apps/flaglite-api/src/handlers/: auth.rs  cli.rs  flags.rs  llms.rs  mod.rs  projects.rs
apps/flaglite-api/src/storage/: mod.rs  postgres.rs  sqlite.rs
apps/flaglite-cli/: Cargo.toml  README.md
apps/flaglite-cli/src/: config.rs  main.rs  output.rs
apps/flaglite-cli/src/commands/: auth.rs  envs.rs  flags.rs  mod.rs  projects.rs
apps/flaglite-dashboard/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.e2e.yml  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts
apps/flaglite-dashboard/e2e/: auth.spec.ts  environments.spec.ts  flags.spec.ts  projects.spec.ts  sdk-snippets.spec.ts
apps/flaglite-dashboard/src/: App.tsx  main.tsx  types.ts
apps/flaglite-dashboard/src/components/: Alert.tsx  Button.tsx  FlagIcon.tsx  Input.tsx  Layout.tsx  Modal.tsx  ProjectSelector.tsx  Toggle.tsx
apps/flaglite-dashboard/src/context/: AuthContext.tsx
apps/flaglite-dashboard/src/lib/: api.ts
apps/flaglite-dashboard/src/pages/: FlagDetailPage.tsx  LoginPage.tsx  ProjectDetailPage.tsx  ProjectEnvironmentsPage.tsx  ProjectFlagsPage.tsx  ProjectSettingsPage.tsx  ProjectsPage.tsx  SignupPage.tsx
charts/: README.md
charts/flaglite/: Chart.yaml  values.example.yaml  values.yaml
charts/flaglite/templates/: deployment.yaml  hpa.yaml  ingress.yaml  pdb.yaml  pvc.yaml  secret.yaml  servicemonitor.yaml
cli/: Cargo.toml
cli/src/: config.rs  main.rs  output.rs
cli/src/commands/: auth.rs  envs.rs  flags.rs  projects.rs
crates/flaglite-client/: Cargo.toml
crates/flaglite-client/src/: client.rs  lib.rs
crates/flaglite-core/: Cargo.toml
crates/flaglite-core/src/: error.rs  lib.rs  types.rs
dashboard/: index.html  package-lock.json  package.json
dashboard/src/: App.tsx  index.css
dashboard/src/components/: Button.tsx  Layout.tsx  Modal.tsx  Toggle.tsx
dashboard/src/context/: AuthContext.tsx  ProjectContext.tsx
dashboard/src/lib/: api.ts
dashboard/src/pages/: CreateFlagModal.tsx  DashboardPage.tsx  LoginPage.tsx  SettingsPage.tsx
docker/: api.Dockerfile
docs/: REFACTOR-PLAN.md  configuration.md  index.md  self-hosting.md  storage-abstraction-spec.md
docs/api/: overview.md
docs/sdks/: go.md  javascript.md  python.md  rust.md
e2e/: test-api.sh
helm/: README.md  values-production.yaml  values-staging.yaml
helm/flaglite/: Chart.yaml  values.yaml
helm/flaglite/templates/: NOTES.txt  _helpers.tpl  backup-cronjob.yaml  deployment.yaml  prometheusrule.yaml  service.yaml
k8s/: README.md  deployment.yaml  secrets.yaml.template
npm/: .npmignore  README.md  install.js  package.json
openapi/: README.md  index.html  openapi.yaml  swagger.html
scripts/: unit-coverage.sh
shared/: Cargo.toml
shared/src/: client.rs  error.rs  lib.rs  types.rs
terraform/: README.md
terraform/aws/: main.tf  outputs.tf  variables.tf
terraform/aws/modules/eks/: main.tf  outputs.tf  variables.tf
terraform/aws/modules/networking/: main.tf  outputs.tf  variables.tf
terraform/aws/modules/rds/: main.tf  outputs.tf  variables.tf
terraform/examples/aws-minimal/: main.tf  terraform.tfvars.example
website/: README.md  astro.config.mjs  deploy.sh  index.html  llms.txt  package-lock.json
website/css/: style.css
website/js/: main.js
website/public/: CNAME  install.sh
website/src/components/: SiteTitle.astro
website/src/content/docs/docs/: installation.md  introduction.md  quickstart.md
website/src/content/docs/docs/api/: authentication.md  evaluation.md  flags.md  overview.md
website/src/content/docs/docs/sdks/: go.md  javascript.md  python.md  rust.md
website/src/pages/: index.astro
website/src/pages/docs/: api.astro  index.astro  quickstart.astro  sdks.astro
website/src/styles/: custom.css  landing.css
xtask/: Cargo.toml
xtask/src/: main.rs
