[workspace]
resolver = "2"
members = ["api", "cli", "shared"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Faísca <team@faisca.dev>"]
license = "MIT"
repository = "https://github.com/faisca/flaglite"

[workspace.dependencies]
# Shared dependencies across workspace
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
thiserror = "2.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
# Pin time to stable-compatible version (0.3.46+ requires edition2024)
time = ">=0.3.0, <0.3.46"
