[workspace]
resolver = "2"
members = [
    "apps/flaglite-api",
    "apps/flaglite-cli",
    "apps/e2e-tests",
    "crates/flaglite-core",
    "crates/flaglite-client",
    "xtask",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Faísca <team@faisca.dev>"]
license = "AGPL-3.0"
repository = "https://github.com/faisca/flaglite"

[workspace.dependencies]
# Shared dependencies across workspace
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
thiserror = "2.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
# Pin time to stable-compatible version (0.3.46+ requires edition2024)
time = ">=0.3.0, <0.3.46"
