[package]
name = "e2e-tests"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
# Async runtime
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }

# HTTP client for health checks
reqwest = { workspace = true }

# JSON parsing for CLI output
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Unique IDs
uuid = { workspace = true, features = ["v4"] }

# Error handling
anyhow = { workspace = true }

# Unix signals for graceful shutdown
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[[test]]
name = "auth"
path = "tests/auth_test.rs"

[[test]]
name = "projects"
path = "tests/projects_test.rs"

[[test]]
name = "flags"
path = "tests/flags_test.rs"
