[package]
name = "flaglite-api"
version.workspace = true
edition.workspace = true
description = "FlagLite API Server - Lightweight feature flag service"
license.workspace = true
repository.workspace = true

[[bin]]
name = "flaglite-api"
path = "src/main.rs"

[features]
default = ["sqlite", "postgres"]
sqlite = ["sqlx/sqlite"]
postgres = ["sqlx/postgres"]

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio.workspace = true
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "uuid", "chrono"] }

# Auth
jsonwebtoken = "9"
argon2 = "0.5"
sha2 = "0.10"

# Serialization
serde.workspace = true
serde_json.workspace = true

# Async
async-trait = "0.1"

# Utilities
uuid.workspace = true
chrono.workspace = true
rand = "0.8"
murmur3 = "0.5"
thiserror.workspace = true
anyhow.workspace = true
time.workspace = true

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Config
dotenvy = "0.15"

# CLI
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
reqwest.workspace = true
