[package]
name = "flaglite-client"
version.workspace = true
edition.workspace = true
description = "HTTP client for FlagLite API"
license.workspace = true
repository.workspace = true

[dependencies]
flaglite-core = { path = "../flaglite-core" }
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
