[package]
name = "flaglite-core"
version.workspace = true
edition.workspace = true
description = "Core types and error definitions for FlagLite"
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
